# Erin

./: .gitignore  .gitmodules  CMakeLists.txt  Generate Solution.bat  Generate solution for VS2019.bat  LICENSE  Premake - WIndows.bat  README.md  dkgl-premake-config.lua  premake-dkgl.lua  premake-erin.lua  premake-gmake-linux.sh  premake-gmake-win.bat  premake-linux.sh  premake-mac.sh  premake-vs2019-win.bat  premake-win.bat
DKGL/: CMakeLists.txt
DKGL/src/: DKGLApp.cpp
DKGLCore/: CMakeLists.txt
DKGLCore/src/: DKGLCore.h
DKGLCore/src/DKGLCore/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
DKGLCore/src/DKGLCore/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Erin/: CMakeLists.txt
Erin/src/: Erin.h  ErinApp.cpp  ErinPCH.cpp  ErinPCH.h
Erin/src/Erin/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Erin/src/Erin/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Erin/src/Erin/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Erin/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
Erin/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
ErinCore/: CMakeLists.txt
ErinCore/src/: ErinCore.h
ErinCore/src/ErinCore/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
ErinCore/src/ErinCore/Events/: Event.h
Sandbox/src/: SandboxApp.cpp
Tools/Binaries/sed/: source.txt
Tools/BuildScripts/: premake-gmake-linux.sh  premake-gmake-mac.sh  premake-gmake-win.bat  premake-vs2019-win.bat  premake-xcode-mac.sh
Tools/BuildScripts/config/: erin-premake-config.lua  glad-premake-config.lua  glfw-premake-config.lua  imgui-premake-config.lua
Tools/CleanScripts/: clean-unix.sh  clean-win.bat
